# ai-learning

./: .gitignore  COMPLETION_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PROJECT_INDEX.md  QUICK_REFERENCE.md  README.md  RESTRUCTURING_COMPLETE.md  RESTRUCTURING_PLAN.md  VISUAL_OVERVIEW.md  pyproject.toml
frameworks/pytorch/: Pipfile
frameworks/tensorflow/: Pipfile
frameworks/tensorflow/docs/: references.md
models/: MODEL_INDEX.md  STRUCTURE.md
models/1_supervised_learning/classification/: README.md  train_jax.py  train_pytorch.py  train_pytorch_v2.py  train_sklearn.py  train_tensorflow.py  train_tensorflow_v2.py
models/1_supervised_learning/ensemble_methods/: README.md  train.py  train_pytorch.py  train_sklearn.py
models/1_supervised_learning/regression/: README.md  train_jax.py  train_pytorch.py  train_sklearn.py  train_tensorflow.py  train_tensorflow_v2.py
models/2_nlp_models/embeddings/: README.md
models/2_nlp_models/sentiment_analysis/: README.md  train_pytorch.py  train_sklearn.py  train_tensorflow.py
models/langchain/: README.md  train_embeddings.py  train_llm.py
theory/: cheat_sheet-building_supervised_learning_models.md  cheat_sheet-linear_and_logistic_regression.md  classification.md  k-means_clustering.md  logistic_regression.md  ml_model_lifecycle.md  own_summary.md  questions.md  regression.md  support_vector_machine.md  what_is_ml?.md
theory/models/: classical_ml.md  generative_models.md  neural_networks.md  transformers.md  tree_ensembles.md
theory/notebooks/: Simple-Linear-Regression.ipynb
(+194 files in other folders)
