[project]
name = "ai-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "diffusers>=0.35.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "protobuf>=6.33.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "xgboost>=3.1.2",
]
