[project]
name = "ai-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.25.0",
    "diffusers>=0.25.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "matplotlib>=3.10.7",
    "moviepy>=1.0.3",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pillow>=10.0.0",
    "protobuf>=6.33.1",
    "safetensors>=0.4.0",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "tensorflow>=2.20.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "transformers>=4.35.0",
    "xgboost>=3.1.2",
]
